@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2004/10/06 15:16:03 minskim Exp $
+# $NetBSD: Makefile,v 1.5 2004/10/10 09:48:35 minskim Exp $
 
-DISTNAME=	moss-0.1.9
+DISTNAME=	moss-0.1.11
 CATEGORIES=	audio
-MASTER_SITES=	http://kldp.net/download.php/1528/
+MASTER_SITES=	http://kldp.net/download.php/1534/
 
 MAINTAINER=	myunggoni@users.kldp.net
 HOMEPAGE=	http://moss.kldp.net/
