@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2004/10/06 15:16:03 minskim Exp $
+$NetBSD: distinfo,v 1.4 2004/10/10 09:48:35 minskim Exp $
 
-SHA1 (moss-0.1.9.tar.gz) = aa195fe2d462d2c48ea0c988529b94233c6d7d14
-Size (moss-0.1.9.tar.gz) = 43214 bytes
+SHA1 (moss-0.1.11.tar.gz) = 5b35fec9e8effc1da8fc865c276d24f7d25d64e6
+Size (moss-0.1.11.tar.gz) = 43267 bytes
 SHA1 (patch-aa) = 0afee4be74d99ba3c924d2da8cf23309bba8f99f
